// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="ui-alert ui-alert--confirmation"
  role="alert"
  style={
    Object {
      "WebkitBoxPack": "center",
      "justifyContent": "center",
    }
  }
  type="confirmation"
>
  <i
    className="ui-icon ui-icon--size-16 fill-currentColor"
    onClick={undefined}
    style={Object {}}
    title={undefined}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <use
        xlinkHref="#check_circle"
      />
    </svg>
  </i>
  <div
    className="ui-alert__content"
  >
    <span
      className="ui-alert__message"
    >
      A confirmation alert
    </span>
  </div>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="ui-alert ui-alert--warning"
  role="alert"
  style={
    Object {
      "WebkitBoxPack": "center",
      "justifyContent": "center",
    }
  }
  type="warning"
>
  <i
    className="ui-icon ui-icon--size-16 fill-currentColor"
    onClick={undefined}
    style={Object {}}
    title={undefined}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <use
        xlinkHref="#error_outline"
      />
    </svg>
  </i>
  <div
    className="ui-alert__content"
  >
    <span
      className="ui-alert__message"
    >
      A warning alert
    </span>
  </div>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="ui-alert ui-alert--info"
  role="alert"
  style={
    Object {
      "WebkitBoxPack": "center",
      "justifyContent": "center",
    }
  }
  type="info"
>
  <i
    className="ui-icon ui-icon--size-16 fill-currentColor"
    onClick={undefined}
    style={Object {}}
    title={undefined}
  >
    <svg
      aria-hidden="true"
      height={16}
      width={16}
    >
      <use
        xlinkHref="#info_outline"
      />
    </svg>
  </i>
  <div
    className="ui-alert__content"
  >
    <span
      className="ui-alert__message"
    >
      A info alert
    </span>
  </div>
</div>
`;
